accelerated-domains: add cniqiu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21449,6 +21449,7 @@ server=/cnipa-sc.com/114.114.114.114
 server=/cnipa-tj.com/114.114.114.114
 server=/cnipai.com/114.114.114.114
 server=/cnipr.com/114.114.114.114
+server=/cniqiu.com/114.114.114.114
 server=/cnirtrade.com/114.114.114.114
 server=/cnisp.org/114.114.114.114
 server=/cnispgroup.com/114.114.114.114
