--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30470,6 +30470,7 @@ server=/fiberhomegroup.com/114.114.114.114
 server=/fibocom.com/114.114.114.114
 server=/fibodata.com/114.114.114.114
 server=/fibrlink.net/114.114.114.114
+server=/fico-chem.com/114.114.114.114
 server=/ficochina.net/114.114.114.114
 server=/ficowshen.com/114.114.114.114
 server=/fiehff.com/114.114.114.114
