--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9668,6 +9668,7 @@ server=/ahjdq.com/114.114.114.114
 server=/ahjgxy.com/114.114.114.114
 server=/ahjiankong.com/114.114.114.114
 server=/ahjinyu.com/114.114.114.114
+server=/ahjishi.com/114.114.114.114
 server=/ahjk.com/114.114.114.114
 server=/ahjkjt.com/114.114.114.114
 server=/ahjlxcl.com/114.114.114.114
