--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10208,6 +10208,7 @@ server=/aiuxian.com/114.114.114.114
 server=/aiuxstudio.com/114.114.114.114
 server=/aiv5.cc/114.114.114.114
 server=/aivaylaco.com/114.114.114.114
+server=/aiveola.com/114.114.114.114
 server=/aiviy.com/114.114.114.114
 server=/aiviysoft.com/114.114.114.114
 server=/aivote.com/114.114.114.114
