--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42191,6 +42191,7 @@ server=/hudong100.org/114.114.114.114
 server=/hudongad.com/114.114.114.114
 server=/hudongba.com/114.114.114.114
 server=/hudongcdn.com/114.114.114.114
+server=/hudongkejian.com/114.114.114.114
 server=/hudongku.net/114.114.114.114
 server=/hudou.net/114.114.114.114
 server=/hudunsoft.com/114.114.114.114
