--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42719,6 +42719,7 @@ server=/huuhoo.com/114.114.114.114
 server=/huuing.com/114.114.114.114
 server=/huwaibbs.com/114.114.114.114
 server=/huwaizb.com/114.114.114.114
+server=/huwangne.com/114.114.114.114
 server=/huwangyun.com/114.114.114.114
 server=/huwatech.club/114.114.114.114
 server=/huway.com/114.114.114.114
