accelerated-domains: add yuandong168.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93346,6 +93346,7 @@ server=/yuanda-fm.com/114.114.114.114
 server=/yuandi.com/114.114.114.114
 server=/yuandian.club/114.114.114.114
 server=/yuandiancredit.com/114.114.114.114
+server=/yuandong168.com/114.114.114.114
 server=/yuandongsl.com/114.114.114.114
 server=/yuanf56.com/114.114.114.114
 server=/yuanfen.icu/114.114.114.114
