accelerated-domains: add langkaiwenhua.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52392,6 +52392,7 @@ server=/langfang12345.com/114.114.114.114
 server=/langfangfc.com/114.114.114.114
 server=/langgine.com/114.114.114.114
 server=/langhuansoft.net/114.114.114.114
+server=/langkaiwenhua.com/114.114.114.114
 server=/langkawipower.com/114.114.114.114
 server=/langke.com/114.114.114.114
 server=/langke.tv/114.114.114.114
