accelerated-domains: add dgxhsbz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25073,6 +25073,7 @@ server=/dgweierwj.com/114.114.114.114
 server=/dgwlhj.com/114.114.114.114
 server=/dgwtrl.com/114.114.114.114
 server=/dgxbjg.com/114.114.114.114
+server=/dgxhsbz.com/114.114.114.114
 server=/dgxinde.net/114.114.114.114
 server=/dgxue.com/114.114.114.114
 server=/dgxzxjj.com/114.114.114.114
