accelerated-domains: add woyouzhuce.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85025,6 +85025,7 @@ server=/woying.com/114.114.114.114
 server=/woyonghj.com/114.114.114.114
 server=/woyoo.com/114.114.114.114
 server=/woyouche.com/114.114.114.114
+server=/woyouzhuce.com/114.114.114.114
 server=/wozaijia.com/114.114.114.114
 server=/wozaixiaoyuan.com/114.114.114.114
 server=/wozhangwan.com/114.114.114.114
