--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91581,6 +91581,7 @@ server=/yingyongmiao.com/114.114.114.114
 server=/yingyongshichang.com/114.114.114.114
 server=/yingyongso.com/114.114.114.114
 server=/yingyu.com/114.114.114.114
+server=/yingyuanzhifu.com/114.114.114.114
 server=/yingyuchat.com/114.114.114.114
 server=/yingyudengji.com/114.114.114.114
 server=/yingyuecl.com/114.114.114.114
