accelerated-domains: add klner.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51128,6 +51128,7 @@ server=/klmnf.com/114.114.114.114
 server=/klmy118114.com/114.114.114.114
 server=/klmybbs.com/114.114.114.114
 server=/klmyssn.com/114.114.114.114
+server=/klner.com/114.114.114.114
 server=/klniu.com/114.114.114.114
 server=/kloong.com/114.114.114.114
 server=/klpbbs.com/114.114.114.114
