accelerated-domains: add hzxinshen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43312,6 +43312,7 @@ server=/hzxdship.com/114.114.114.114
 server=/hzxhgy.com/114.114.114.114
 server=/hzxiangshang.com/114.114.114.114
 server=/hzxinglong-ip.com/114.114.114.114
+server=/hzxinshen.com/114.114.114.114
 server=/hzxiyuege.com/114.114.114.114
 server=/hzxma.com/114.114.114.114
 server=/hzxsjgxx.com/114.114.114.114
