--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62040,6 +62040,7 @@ server=/nq6.com/114.114.114.114
 server=/nqez.com/114.114.114.114
 server=/nqlai.com/114.114.114.114
 server=/nqmoui.com/114.114.114.114
+server=/nqqpp.com/114.114.114.114
 server=/nr-esc.com/114.114.114.114
 server=/nrb.cc/114.114.114.114
 server=/nrbbearing.com/114.114.114.114
