--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84357,6 +84357,7 @@ server=/winnermicro.com/114.114.114.114
 server=/winnerracing.com/114.114.114.114
 server=/winnet.cc/114.114.114.114
 server=/winning11cn.com/114.114.114.114
+server=/winnyefanho.net/114.114.114.114
 server=/winotes.net/114.114.114.114
 server=/winotmk.com/114.114.114.114
 server=/winrim.com/114.114.114.114
