accelerated-domains: add hzgymd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43181,6 +43181,7 @@ server=/hzgrow.com/114.114.114.114
 server=/hzguojiao.com/114.114.114.114
 server=/hzgwzn.com/114.114.114.114
 server=/hzgxr.com/114.114.114.114
+server=/hzgymd.com/114.114.114.114
 server=/hzgzsoft.com/114.114.114.114
 server=/hzh0775.com/114.114.114.114
 server=/hzh1.com/114.114.114.114
