accelerated-domains: add portlandgaa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64921,6 +64921,7 @@ server=/popziti.com/114.114.114.114
 server=/porlockz.com/114.114.114.114
 server=/porquesifiestas.com/114.114.114.114
 server=/portalcdn.cdnetworks.com/114.114.114.114
+server=/portlandgaa.com/114.114.114.114
 server=/ports-intl.com/114.114.114.114
 server=/portsgmt.com/114.114.114.114
 server=/porttong.com/114.114.114.114
