accelerated-domains: add rixinyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68787,6 +68787,7 @@ server=/riverlimittech.net/114.114.114.114
 server=/riveryun.com/114.114.114.114
 server=/riwise.com/114.114.114.114
 server=/rix-dl.com/114.114.114.114
+server=/rixinyl.com/114.114.114.114
 server=/riya.cc/114.114.114.114
 server=/riyingkj.com/114.114.114.114
 server=/riyuexing.org/114.114.114.114
