--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17724,6 +17724,7 @@ server=/cdhaiguang.com/114.114.114.114
 server=/cdhfund.com/114.114.114.114
 server=/cdhglsc.com/114.114.114.114
 server=/cdhgr.com/114.114.114.114
+server=/cdhhoa.com/114.114.114.114
 server=/cdhjsd.com/114.114.114.114
 server=/cdhld.com/114.114.114.114
 server=/cdhr.net/114.114.114.114
