accelerated-domains: add umate.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80522,6 +80522,7 @@ server=/um.run/114.114.114.114
 server=/umajor.net/114.114.114.114
 server=/umaman.com/114.114.114.114
 server=/umasoft.com/114.114.114.114
+server=/umate.net/114.114.114.114
 server=/umb.ink/114.114.114.114
 server=/umbpay.com/114.114.114.114
 server=/umc-ai.com/114.114.114.114
