accelerated-domains: add julang88.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49368,6 +49368,7 @@ server=/jukeyouxuan.com/114.114.114.114
 server=/jukichina.com/114.114.114.114
 server=/jukuu.com/114.114.114.114
 server=/julaibao.com/114.114.114.114
+server=/julang88.com/114.114.114.114
 server=/julanhp.com/114.114.114.114
 server=/julanling.com/114.114.114.114
 server=/julecn.com/114.114.114.114
