--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53225,6 +53225,7 @@ server=/lengxiaohua.com/114.114.114.114
 server=/lengyankj.com/114.114.114.114
 server=/lengzzz.com/114.114.114.114
 server=/lening100.com/114.114.114.114
+server=/lenitsky.com/114.114.114.114
 server=/leniugame.com/114.114.114.114
 server=/leniy.org/114.114.114.114
 server=/lenosoft.net/114.114.114.114
