--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20069,6 +20069,7 @@ server=/chshcms.com/114.114.114.114
 server=/chshcms.net/114.114.114.114
 server=/chshouyu.com/114.114.114.114
 server=/chsmarttv.com/114.114.114.114
+server=/chsou.com/114.114.114.114
 server=/chspv.com/114.114.114.114
 server=/chste.com/114.114.114.114
 server=/chszzy.com/114.114.114.114
