--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85669,6 +85669,7 @@ server=/www9912.com/114.114.114.114
 server=/wwwavtt.net/114.114.114.114
 server=/wwwbuild.net/114.114.114.114
 server=/wwwer.net/114.114.114.114
+server=/wwwfabu52.com/114.114.114.114
 server=/wwwfkw.com/114.114.114.114
 server=/wwwic.net/114.114.114.114
 server=/wwwimages.adobe.com/114.114.114.114
