accelerated-domains: add baozhenlu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13254,6 +13254,7 @@ server=/baozang.com/114.114.114.114
 server=/baozengzhang.com/114.114.114.114
 server=/baozhenart.com/114.114.114.114
 server=/baozheng.cc/114.114.114.114
+server=/baozhenlu.com/114.114.114.114
 server=/baozhilin.com/114.114.114.114
 server=/baozhuang.biz/114.114.114.114
 server=/baozhuangren.com/114.114.114.114
