accelerated-domains: add puxunkej.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65426,6 +65426,7 @@ server=/puusa.net/114.114.114.114
 server=/puwenlong.com/114.114.114.114
 server=/puworld.com/114.114.114.114
 server=/puxiang.com/114.114.114.114
+server=/puxunkej.com/114.114.114.114
 server=/puyideshiye.com/114.114.114.114
 server=/puyimed.com/114.114.114.114
 server=/puyuan-electric.com/114.114.114.114
