accelerated-domains: add qzhyyljg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67976,6 +67976,7 @@ server=/qzhrkj.com/114.114.114.114
 server=/qzhsjc.com/114.114.114.114
 server=/qzhslw.com/114.114.114.114
 server=/qzhxshipping.com/114.114.114.114
+server=/qzhyyljg.com/114.114.114.114
 server=/qzimg.com/114.114.114.114
 server=/qzj2.com/114.114.114.114
 server=/qzjcd.com/114.114.114.114
