--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31182,6 +31182,7 @@ server=/fractal-technology.com/114.114.114.114
 server=/fraee.com/114.114.114.114
 server=/fragpunk.com/114.114.114.114
 server=/fragrance.ink/114.114.114.114
+server=/frainfo.com/114.114.114.114
 server=/framemaker.com/114.114.114.114
 server=/franceqz.com/114.114.114.114
 server=/franchiseworld.hk/114.114.114.114
