accelerated-domains: add cmoretti.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21038,6 +21038,7 @@ server=/cmoct.com/114.114.114.114
 server=/cmodel.com/114.114.114.114
 server=/cmodes.com/114.114.114.114
 server=/cmol.com/114.114.114.114
+server=/cmoretti.com/114.114.114.114
 server=/cmp288.com/114.114.114.114
 server=/cmpassport.com/114.114.114.114
 server=/cmpay.com/114.114.114.114
