--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30406,6 +30406,7 @@ server=/ffphb.com/114.114.114.114
 server=/ffpp.xyz/114.114.114.114
 server=/ffpw1688.com/114.114.114.114
 server=/ffquan.com/114.114.114.114
+server=/ffreeslott.com/114.114.114.114
 server=/ffsgame.com/114.114.114.114
 server=/ffsky.com/114.114.114.114
 server=/fftub.com/114.114.114.114
