--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80931,6 +80931,7 @@ server=/usoi.net/114.114.114.114
 server=/usonetrip.com/114.114.114.114
 server=/uspard.com/114.114.114.114
 server=/usplanking.com/114.114.114.114
+server=/usryinc.com/114.114.114.114
 server=/usst.store/114.114.114.114
 server=/ustack.com/114.114.114.114
 server=/ustalk.com/114.114.114.114
