--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9617,6 +9617,7 @@ server=/ahbagy.org/114.114.114.114
 server=/ahbb.cc/114.114.114.114
 server=/ahbbsun.com/114.114.114.114
 server=/ahbbtv.com/114.114.114.114
+server=/ahbhcm.com/114.114.114.114
 server=/ahbhyb.com/114.114.114.114
 server=/ahbys.com/114.114.114.114
 server=/ahbzgs.com/114.114.114.114
