accelerated-domains: add zhitangvalve.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96146,6 +96146,7 @@ server=/zhishutang.com/114.114.114.114
 server=/zhishuyun.com/114.114.114.114
 server=/zhisiyun.com/114.114.114.114
 server=/zhisuoyi.net/114.114.114.114
+server=/zhitangvalve.com/114.114.114.114
 server=/zhitaosoft.com/114.114.114.114
 server=/zhitingtech.com/114.114.114.114
 server=/zhitongcaijing.com/114.114.114.114
