accelerated-domains: add qufanpai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67615,6 +67615,7 @@ server=/questyleshop.com/114.114.114.114
 server=/quexiaoxian.com/114.114.114.114
 server=/queyang.com/114.114.114.114
 server=/qufair.com/114.114.114.114
+server=/qufanpai.com/114.114.114.114
 server=/qufaya.com/114.114.114.114
 server=/qufeisoft.com/114.114.114.114
 server=/qufeizhou.com/114.114.114.114
