--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23906,6 +23906,7 @@ server=/dalaosz.com/114.114.114.114
 server=/dalelingtea.com/114.114.114.114
 server=/dalianair-china.com/114.114.114.114
 server=/dalianiso.com/114.114.114.114
+server=/daliankaiyuanhong.com/114.114.114.114
 server=/dalianshengmi.com/114.114.114.114
 server=/daliansky.net/114.114.114.114
 server=/daliantyre.com/114.114.114.114
