accelerated-domains: add xmgxpt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88547,6 +88547,7 @@ server=/xmgps.com/114.114.114.114
 server=/xmgreenrock.com/114.114.114.114
 server=/xmgsd.com/114.114.114.114
 server=/xmguoyi.com/114.114.114.114
+server=/xmgxpt.com/114.114.114.114
 server=/xmhaicangmarathon.com/114.114.114.114
 server=/xmheigu.com/114.114.114.114
 server=/xmheitu.com/114.114.114.114
