--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60068,6 +60068,7 @@ server=/naec-cn.com/114.114.114.114
 server=/naeeo.com/114.114.114.114
 server=/nagagame.net/114.114.114.114
 server=/nagain.com/114.114.114.114
+server=/nagar-setu.com/114.114.114.114
 server=/nagcloudcs.com/114.114.114.114
 server=/nagekuai.com/114.114.114.114
 server=/nagezan.net/114.114.114.114
