--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79254,6 +79254,7 @@ server=/truesing.com/114.114.114.114
 server=/truestudio.tech/114.114.114.114
 server=/trufun.net/114.114.114.114
 server=/truimo.com/114.114.114.114
+server=/trumsense.com/114.114.114.114
 server=/trunktech.com/114.114.114.114
 server=/trusfort.com/114.114.114.114
 server=/trusit.net/114.114.114.114
