accelerated-domains: add xashl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86164,6 +86164,7 @@ server=/xasff.com/114.114.114.114
 server=/xasfyw.com/114.114.114.114
 server=/xasgxy.com/114.114.114.114
 server=/xashangwang.com/114.114.114.114
+server=/xashl.com/114.114.114.114
 server=/xashzhjz.com/114.114.114.114
 server=/xasimonds.com/114.114.114.114
 server=/xasrc.com/114.114.114.114
