--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55629,6 +55629,7 @@ server=/luv66.com/114.114.114.114
 server=/luwei.me/114.114.114.114
 server=/luweiteng.xyz/114.114.114.114
 server=/luweiwater.com/114.114.114.114
+server=/luwoff.com/114.114.114.114
 server=/luxads.net/114.114.114.114
 server=/luxe.cc/114.114.114.114
 server=/luxe.co/114.114.114.114
