--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48201,6 +48201,7 @@ server=/jjkk.org/114.114.114.114
 server=/jjkucunxie.com/114.114.114.114
 server=/jjldbk.com/114.114.114.114
 server=/jjldxz.com/114.114.114.114
+server=/jjlgbj.com/114.114.114.114
 server=/jjlhbs.com/114.114.114.114
 server=/jjlvu.com/114.114.114.114
 server=/jjmatch.com/114.114.114.114
