--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78360,6 +78360,7 @@ server=/tjluohuzhijia.com/114.114.114.114
 server=/tjmama.com/114.114.114.114
 server=/tjmcgc.com/114.114.114.114
 server=/tjmhc.com/114.114.114.114
+server=/tjmldy.com/114.114.114.114
 server=/tjmuch.com/114.114.114.114
 server=/tjmulin.com/114.114.114.114
 server=/tjnjw.com/114.114.114.114
