accelerated-domains: add chuanwu666.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20160,6 +20160,7 @@ server=/chuantangjitrade.com/114.114.114.114
 server=/chuantec.com/114.114.114.114
 server=/chuantiegroup.com/114.114.114.114
 server=/chuantu88.com/114.114.114.114
+server=/chuanwu666.com/114.114.114.114
 server=/chuanxincao.net/114.114.114.114
 server=/chuanye.com/114.114.114.114
 server=/chuanyifu.com/114.114.114.114
