--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12047,6 +12047,7 @@ server=/attendees.link/114.114.114.114
 server=/atticuslab.com/114.114.114.114
 server=/attri.mobi/114.114.114.114
 server=/atukjhesk.com/114.114.114.114
+server=/atum-tech.net/114.114.114.114
 server=/atuoyi.com/114.114.114.114
 server=/atvnk.com/114.114.114.114
 server=/atwbz.com/114.114.114.114
