accelerated-domains: add rongfuhuitong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68996,6 +68996,7 @@ server=/rongdatamall.com/114.114.114.114
 server=/rongdeji.com/114.114.114.114
 server=/rongdipipe.com/114.114.114.114
 server=/rongechain.com/114.114.114.114
+server=/rongfuhuitong.com/114.114.114.114
 server=/ronggangcity.com/114.114.114.114
 server=/ronggongyeya.com/114.114.114.114
 server=/ronghaosk.com/114.114.114.114
