accelerated-domains: add jscsbz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48920,6 +48920,7 @@ server=/jscmjt.com/114.114.114.114
 server=/jscnc.net/114.114.114.114
 server=/jscnnet.com/114.114.114.114
 server=/jscrg.com/114.114.114.114
+server=/jscsbz.com/114.114.114.114
 server=/jscsdr.com/114.114.114.114
 server=/jscsfc.com/114.114.114.114
 server=/jscssimg.com/114.114.114.114
