--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78408,6 +78408,7 @@ server=/tjyywjc.com/114.114.114.114
 server=/tjzb.com/114.114.114.114
 server=/tjzcsj.com/114.114.114.114
 server=/tjzfcg.com/114.114.114.114
+server=/tjzfhgcj.com/114.114.114.114
 server=/tjzhongyiyao.com/114.114.114.114
 server=/tjzhyj.com/114.114.114.114
 server=/tjzyec.com/114.114.114.114
