accelerated-domains: add atwlc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12051,6 +12051,7 @@ server=/atum-tech.net/114.114.114.114
 server=/atuoyi.com/114.114.114.114
 server=/atvnk.com/114.114.114.114
 server=/atwbz.com/114.114.114.114
+server=/atwlc.com/114.114.114.114
 server=/atwtech.net/114.114.114.114
 server=/atyun.com/114.114.114.114
 server=/atyun.net/114.114.114.114
