accelerated-domains: add 0731zsw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -567,6 +567,7 @@ server=/0731pgy.com/114.114.114.114
 server=/0731tg.com/114.114.114.114
 server=/0731wan.com/114.114.114.114
 server=/0731wx.com/114.114.114.114
+server=/0731zsw.com/114.114.114.114
 server=/0733news.com/114.114.114.114
 server=/0734zpw.com/114.114.114.114
 server=/0735.com/114.114.114.114
