accelerated-domains: add pebellows.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64021,6 +64021,7 @@ server=/pearlinpalm.com/114.114.114.114
 server=/pearvideo.com/114.114.114.114
 server=/peasrch.com/114.114.114.114
 server=/peatour.com/114.114.114.114
+server=/pebellows.com/114.114.114.114
 server=/pec33.com/114.114.114.114
 server=/peccn.com/114.114.114.114
 server=/pechoin.com/114.114.114.114
