--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46918,6 +46918,7 @@ server=/jiameng.com/114.114.114.114
 server=/jiamengbang.net/114.114.114.114
 server=/jiamengdp.com/114.114.114.114
 server=/jiamengfei.com/114.114.114.114
+server=/jiami110.com/114.114.114.114
 server=/jiamiantech.com/114.114.114.114
 server=/jiaminghi.com/114.114.114.114
 server=/jiamingwenhua.com/114.114.114.114
