--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14176,6 +14176,7 @@ server=/bh5.com/114.114.114.114
 server=/bh568.com/114.114.114.114
 server=/bh8sel.com/114.114.114.114
 server=/bhakte.com/114.114.114.114
+server=/bhbaihua.com/114.114.114.114
 server=/bhcd.net/114.114.114.114
 server=/bhcgky.com/114.114.114.114
 server=/bhcpu.com/114.114.114.114
