accelerated-domains: add jstzloveyuebao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49143,6 +49143,7 @@ server=/jsty.com/114.114.114.114
 server=/jstyny.com/114.114.114.114
 server=/jstzhospital.com/114.114.114.114
 server=/jstzjy.net/114.114.114.114
+server=/jstzloveyuebao.com/114.114.114.114
 server=/jstzrcb.com/114.114.114.114
 server=/jsw118.com/114.114.114.114
 server=/jsw988.com/114.114.114.114
