accelerated-domains: add jxqtkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49778,6 +49778,7 @@ server=/jxphone.com/114.114.114.114
 server=/jxphyz.com/114.114.114.114
 server=/jxpta.com/114.114.114.114
 server=/jxqcw.com/114.114.114.114
+server=/jxqtkj.com/114.114.114.114
 server=/jxqyfw.com/114.114.114.114
 server=/jxrays.com/114.114.114.114
 server=/jxrcgame.com/114.114.114.114
