accelerated-domains: add godoshdo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33756,6 +33756,7 @@ server=/godida.com/114.114.114.114
 server=/godlu.com/114.114.114.114
 server=/godo.pub/114.114.114.114
 server=/godoor.com/114.114.114.114
+server=/godoshdo.com/114.114.114.114
 server=/godotcn.com/114.114.114.114
 server=/godsendcn.com/114.114.114.114
 server=/godsheepteam.com/114.114.114.114
