accelerated-domains: add darseek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24154,6 +24154,7 @@ server=/darkzonemu.com/114.114.114.114
 server=/darmao.com/114.114.114.114
 server=/darongcheng.com/114.114.114.114
 server=/darryring.com/114.114.114.114
+server=/darseek.com/114.114.114.114
 server=/dartchina.com/114.114.114.114
 server=/dartou.com/114.114.114.114
 server=/dartrun.net/114.114.114.114
