accelerated-domains: add game1215.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32017,6 +32017,7 @@ server=/game-props.com/114.114.114.114
 server=/game-reign.com/114.114.114.114
 server=/game10000.com/114.114.114.114
 server=/game112233.com/114.114.114.114
+server=/game1215.com/114.114.114.114
 server=/game12315.com/114.114.114.114
 server=/game13.com/114.114.114.114
 server=/game2.com/114.114.114.114
