--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86680,6 +86680,7 @@ server=/xhjianglong.com/114.114.114.114
 server=/xhjingling.com/114.114.114.114
 server=/xhjj.com/114.114.114.114
 server=/xhjkgj.com/114.114.114.114
+server=/xhjpzp.com/114.114.114.114
 server=/xhjs168.com/114.114.114.114
 server=/xhkt.tv/114.114.114.114
 server=/xhlaowu.com/114.114.114.114
