--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48716,6 +48716,7 @@ server=/joyapi.com/114.114.114.114
 server=/joydin.com/114.114.114.114
 server=/joyes.com/114.114.114.114
 server=/joyfire.net/114.114.114.114
+server=/joyforce.com/114.114.114.114
 server=/joygames.com/114.114.114.114
 server=/joyglue.com/114.114.114.114
 server=/joying.com/114.114.114.114
