accelerated-domains: add jindanlicai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47520,6 +47520,7 @@ server=/jinchutou.com/114.114.114.114
 server=/jincin.com/114.114.114.114
 server=/jindaixx.com/114.114.114.114
 server=/jindangit.com/114.114.114.114
+server=/jindanlicai.com/114.114.114.114
 server=/jindaoshangwu.com/114.114.114.114
 server=/jindati.com/114.114.114.114
 server=/jindianweb.com/114.114.114.114
