--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68893,6 +68893,7 @@ server=/rm.run/114.114.114.114
 server=/rmb.sh/114.114.114.114
 server=/rmbrate.net/114.114.114.114
 server=/rmburl.com/114.114.114.114
+server=/rmcaribbean.com/114.114.114.114
 server=/rmcteam.org/114.114.114.114
 server=/rmejk.com/114.114.114.114
 server=/rmhospital.com/114.114.114.114
