--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18736,6 +18736,7 @@ server=/chehejia.com/114.114.114.114
 server=/chehui.com/114.114.114.114
 server=/chekb.com/114.114.114.114
 server=/chelaike.com/114.114.114.114
+server=/chelajanitorial.com/114.114.114.114
 server=/chelangauto.com/114.114.114.114
 server=/chelifang.com/114.114.114.114
 server=/chellex.com/114.114.114.114
