accelerated-domains: add hongzhiwanju.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41087,6 +41087,7 @@ server=/hongze365.com/114.114.114.114
 server=/hongzetai.com/114.114.114.114
 server=/hongzhentextile.com/114.114.114.114
 server=/hongzhigongzuowang.com/114.114.114.114
+server=/hongzhiwanju.com/114.114.114.114
 server=/hongzhoukan.com/114.114.114.114
 server=/honhan.ltd/114.114.114.114
 server=/honkaiimpact3.com/114.114.114.114
