accelerated-domains: add dianluo-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25240,6 +25240,7 @@ server=/dianli08.com/114.114.114.114
 server=/dianli100.com/114.114.114.114
 server=/dianliang8.com/114.114.114.114
 server=/dianlinet.com/114.114.114.114
+server=/dianluo-tech.com/114.114.114.114
 server=/dianlut.com/114.114.114.114
 server=/dianlut.net/114.114.114.114
 server=/dianmiaoshou.com/114.114.114.114
