accelerated-domains: add 51docc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4736,6 +4736,7 @@ server=/51diyring.com/114.114.114.114
 server=/51djqu.com/114.114.114.114
 server=/51dmq.com/114.114.114.114
 server=/51dns.com/114.114.114.114
+server=/51docc.com/114.114.114.114
 server=/51docs.com/114.114.114.114
 server=/51dojoy.com/114.114.114.114
 server=/51dongshi.com/114.114.114.114
