accelerated-domains: add imtics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44832,6 +44832,7 @@ server=/imshusheng.com/114.114.114.114
 server=/imsilkroad.com/114.114.114.114
 server=/imsle.com/114.114.114.114
 server=/imsun.net/114.114.114.114
+server=/imtics.com/114.114.114.114
 server=/imtmp.net/114.114.114.114
 server=/imtte.com/114.114.114.114
 server=/imtuan.com/114.114.114.114
