accelerated-domains: add mensshirtstore.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57630,6 +57630,7 @@ server=/menpad.com/114.114.114.114
 server=/menpiao.com/114.114.114.114
 server=/menqiu.com/114.114.114.114
 server=/mensheaven.jp/114.114.114.114
+server=/mensshirtstore.com/114.114.114.114
 server=/mentamob.com/114.114.114.114
 server=/mentorsc.com/114.114.114.114
 server=/mentrends.com/114.114.114.114
