accelerated-domains: add eskuvoifoto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28896,6 +28896,7 @@ server=/esjlf.com/114.114.114.114
 server=/esjson.com/114.114.114.114
 server=/esk365.com/114.114.114.114
 server=/eskimall.com/114.114.114.114
+server=/eskuvoifoto.com/114.114.114.114
 server=/eskux.xyz/114.114.114.114
 server=/eskysky.com/114.114.114.114
 server=/eslosity.com/114.114.114.114
