accelerated-domains: add mcgnb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57105,6 +57105,7 @@ server=/mcfound.net/114.114.114.114
 server=/mcfsji.com/114.114.114.114
 server=/mcfun.tv/114.114.114.114
 server=/mcfxw.com/114.114.114.114
+server=/mcgnb.com/114.114.114.114
 server=/mchat.com/114.114.114.114
 server=/mchifi.com/114.114.114.114
 server=/mchose.pro/114.114.114.114
