accelerated-domains: add dingyinwu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25557,6 +25557,7 @@ server=/dingxutonghui.com/114.114.114.114
 server=/dingyang.com/114.114.114.114
 server=/dingyantec.com/114.114.114.114
 server=/dingyao17.com/114.114.114.114
+server=/dingyinwu.com/114.114.114.114
 server=/dingyue-ele.com/114.114.114.114
 server=/dingyueads.com/114.114.114.114
 server=/dingzhijl.com/114.114.114.114
