accelerated-domains: add ahhrjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9663,6 +9663,7 @@ server=/ahhdb.com/114.114.114.114
 server=/ahhhjx.com/114.114.114.114
 server=/ahhnsz.net/114.114.114.114
 server=/ahhouse.com/114.114.114.114
+server=/ahhrjc.com/114.114.114.114
 server=/ahhtzx.com/114.114.114.114
 server=/ahhwdp.com/114.114.114.114
 server=/ahhyzn.com/114.114.114.114
