accelerated-domains: add ierze.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44119,6 +44119,7 @@ server=/iepose.com/114.114.114.114
 server=/ieppcn.com/114.114.114.114
 server=/ieqkypcq.com/114.114.114.114
 server=/ieryt111.fun/114.114.114.114
+server=/ierze.com/114.114.114.114
 server=/iesdouyin.com/114.114.114.114
 server=/iesdouyin.net/114.114.114.114
 server=/ieshs.com/114.114.114.114
