--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70427,6 +70427,7 @@ server=/sd-ex.com/114.114.114.114
 server=/sd-fjzy.com/114.114.114.114
 server=/sd-kb.com/114.114.114.114
 server=/sd-nand.com/114.114.114.114
+server=/sd-qx.com/114.114.114.114
 server=/sd-rtn.com/114.114.114.114
 server=/sd-sma.com/114.114.114.114
 server=/sd-xd.net/114.114.114.114
