--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41023,6 +41023,7 @@ server=/hongruikt.com/114.114.114.114
 server=/hongruiyanmo.com/114.114.114.114
 server=/hongsanban.com/114.114.114.114
 server=/hongsat.com/114.114.114.114
+server=/hongsebanji.com/114.114.114.114
 server=/hongsegs.com/114.114.114.114
 server=/hongsehuoxian.com/114.114.114.114
 server=/hongsejiqing.com/114.114.114.114
