accelerated-domains: add hfktyy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39776,6 +39776,7 @@ server=/hfkenfan.com/114.114.114.114
 server=/hfkjsd.com/114.114.114.114
 server=/hfkktt.com/114.114.114.114
 server=/hfksmdl.com/114.114.114.114
+server=/hfktyy120.com/114.114.114.114
 server=/hflbysm.com/114.114.114.114
 server=/hfleda.net/114.114.114.114
 server=/hflp88.com/114.114.114.114
