--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32550,6 +32550,7 @@ server=/gdscse.net/114.114.114.114
 server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
 server=/gdsdwan.com/114.114.114.114
+server=/gdsgd.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
 server=/gdslwl.com/114.114.114.114
 server=/gdspeedtest.com/114.114.114.114
