--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40418,6 +40418,7 @@ server=/hlhyc.com/114.114.114.114
 server=/hlideal.com/114.114.114.114
 server=/hlj5hos.com/114.114.114.114
 server=/hljbcgs.com/114.114.114.114
+server=/hljbinghe.com/114.114.114.114
 server=/hljcqjy.com/114.114.114.114
 server=/hljgzkj.com/114.114.114.114
 server=/hljhgckj.com/114.114.114.114
