accelerated-domains: add desmonsur.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24828,6 +24828,7 @@ server=/deskpool.com/114.114.114.114
 server=/desktop-calculator.com/114.114.114.114
 server=/desktopcal.com/114.114.114.114
 server=/deskwc.com/114.114.114.114
+server=/desmonsur.com/114.114.114.114
 server=/desnerboats.com/114.114.114.114
 server=/desoonproduct.com/114.114.114.114
 server=/despiertocfilms.com/114.114.114.114
