--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85662,6 +85662,7 @@ server=/wuzhuiso.com/114.114.114.114
 server=/wvidc.com/114.114.114.114
 server=/wvshare.com/114.114.114.114
 server=/ww2bbs.net/114.114.114.114
+server=/ww8899.com/114.114.114.114
 server=/wware.org/114.114.114.114
 server=/wwenglish.com/114.114.114.114
 server=/wwenglish.org/114.114.114.114
