accelerated-domains: add ypgjrz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93094,6 +93094,7 @@ server=/yp900.com/114.114.114.114
 server=/ypank.com/114.114.114.114
 server=/ypattern.com/114.114.114.114
 server=/ypfph.com/114.114.114.114
+server=/ypgjrz.com/114.114.114.114
 server=/ypgyyq.com/114.114.114.114
 server=/yph-shop.com/114.114.114.114
 server=/yphbuy.com/114.114.114.114
