--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7398,6 +7398,7 @@ server=/818.com/114.114.114.114
 server=/8181xw.com/114.114.114.114
 server=/8181zx.com/114.114.114.114
 server=/8188.cc/114.114.114.114
+server=/818cq.com/114.114.114.114
 server=/818it.com/114.114.114.114
 server=/818ps.com/114.114.114.114
 server=/818tu.com/114.114.114.114
