accelerated-domains: add hengbaochuju.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39532,6 +39532,7 @@ server=/henduofang.com/114.114.114.114
 server=/heng98.com/114.114.114.114
 server=/hengan-instruments.com/114.114.114.114
 server=/hengaodebj.com/114.114.114.114
+server=/hengbaochuju.com/114.114.114.114
 server=/hengbogroup.com/114.114.114.114
 server=/hengchang6.com/114.114.114.114
 server=/hengchangda.com/114.114.114.114
