accelerated-domains: add yuntyfilter.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94044,6 +94044,7 @@ server=/yuntuiweishang.com/114.114.114.114
 server=/yuntuoguan.cc/114.114.114.114
 server=/yuntust.com/114.114.114.114
 server=/yuntuys.com/114.114.114.114
+server=/yuntyfilter.com/114.114.114.114
 server=/yunupay.com/114.114.114.114
 server=/yunverify.com/114.114.114.114
 server=/yunvm.com/114.114.114.114
