--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90376,6 +90376,7 @@ server=/yangwangauto.com/114.114.114.114
 server=/yangwc.com/114.114.114.114
 server=/yangwenlong.org/114.114.114.114
 server=/yangwenqing.com/114.114.114.114
+server=/yangxianbaixing.com/114.114.114.114
 server=/yangxiang.com/114.114.114.114
 server=/yangxiangdb.com/114.114.114.114
 server=/yangxingzhen.com/114.114.114.114
