--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25869,6 +25869,7 @@ server=/dlxgjy.com/114.114.114.114
 server=/dlxk.com/114.114.114.114
 server=/dlxww.com/114.114.114.114
 server=/dlyiliang.com/114.114.114.114
+server=/dlyll.com/114.114.114.114
 server=/dlyy365.com/114.114.114.114
 server=/dlzb.com/114.114.114.114
 server=/dlzbxx.com/114.114.114.114
