accelerated-domains: add dalidm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23923,6 +23923,7 @@ server=/daliantyre.com/114.114.114.114
 server=/dalianxianting.com/114.114.114.114
 server=/daliaolaser.com/114.114.114.114
 server=/daliapp.net/114.114.114.114
+server=/dalidm.com/114.114.114.114
 server=/daliha.com/114.114.114.114
 server=/dalipan.com/114.114.114.114
 server=/daliuren.vip/114.114.114.114
