accelerated-domains: add txjx169.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79988,6 +79988,7 @@ server=/txie.club/114.114.114.114
 server=/txitech.com/114.114.114.114
 server=/txjhqh.com/114.114.114.114
 server=/txjsjgs888.com/114.114.114.114
+server=/txjx169.com/114.114.114.114
 server=/txjy689.com/114.114.114.114
 server=/txlctong.com/114.114.114.114
 server=/txlivecdn.com/114.114.114.114
