accelerated-domains: add qinshine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66634,6 +66634,7 @@ server=/qinqinxiaobao.com/114.114.114.114
 server=/qinronmedia.com/114.114.114.114
 server=/qinronread.com/114.114.114.114
 server=/qinshihu.com/114.114.114.114
+server=/qinshine.com/114.114.114.114
 server=/qinsilk.com/114.114.114.114
 server=/qinsmoon.com/114.114.114.114
 server=/qinsuanbazi.com/114.114.114.114
