accelerated-domains: add heyeca.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39696,6 +39696,7 @@ server=/heycode.com/114.114.114.114
 server=/heycross.com/114.114.114.114
 server=/heycsm.com/114.114.114.114
 server=/heydayinfo.com/114.114.114.114
+server=/heyeca.com/114.114.114.114
 server=/heyi.com/114.114.114.114
 server=/heyiguoyuan.com/114.114.114.114
 server=/heyingcn.com/114.114.114.114
