--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26601,6 +26601,7 @@ server=/dplayerjsvideo.com/114.114.114.114
 server=/dplor.com/114.114.114.114
 server=/dplord.com/114.114.114.114
 server=/dplslab.com/114.114.114.114
+server=/dpmf1688.com/114.114.114.114
 server=/dpn.net/114.114.114.114
 server=/dpqct.com/114.114.114.114
 server=/dpqhf.com/114.114.114.114
