--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47746,6 +47746,7 @@ server=/jinku.com/114.114.114.114
 server=/jinkunlaw.com/114.114.114.114
 server=/jinlaiba.com/114.114.114.114
 server=/jinlaijinwang.com/114.114.114.114
+server=/jinleijx.com/114.114.114.114
 server=/jinletx.com/114.114.114.114
 server=/jinlianchu.com/114.114.114.114
 server=/jinlinghotel.com/114.114.114.114
