accelerated-domains: add qyhgsb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67941,6 +67941,7 @@ server=/qyg9.com/114.114.114.114
 server=/qygjyey.com/114.114.114.114
 server=/qyglzz.com/114.114.114.114
 server=/qyham.com/114.114.114.114
+server=/qyhgsb.com/114.114.114.114
 server=/qyhl.vip/114.114.114.114
 server=/qyhxths.com/114.114.114.114
 server=/qyhxy365.com/114.114.114.114
