accelerated-domains: add jd0817.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46449,6 +46449,7 @@ server=/jd.co/114.114.114.114
 server=/jd.com/114.114.114.114
 server=/jd.hk/114.114.114.114
 server=/jd.shop/114.114.114.114
+server=/jd0817.com/114.114.114.114
 server=/jd100.com/114.114.114.114
 server=/jd120.com/114.114.114.114
 server=/jd123.vip/114.114.114.114
