--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46229,6 +46229,7 @@ server=/jaecdn.com/114.114.114.114
 server=/jaeger-hello.com/114.114.114.114
 server=/jaeosc.com/114.114.114.114
 server=/jafeney.com/114.114.114.114
+server=/jagjj.com/114.114.114.114
 server=/jaja123.com/114.114.114.114
 server=/jajgstx.com/114.114.114.114
 server=/jajjd.com/114.114.114.114
