--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30720,6 +30720,7 @@ server=/fjptzx.com/114.114.114.114
 server=/fjptzyt.com/114.114.114.114
 server=/fjq.icu/114.114.114.114
 server=/fjqionghai.com/114.114.114.114
+server=/fjqunyi.com/114.114.114.114
 server=/fjsdn.com/114.114.114.114
 server=/fjsen.com/114.114.114.114
 server=/fjsfa.org/114.114.114.114
