--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42077,6 +42077,7 @@ server=/huatuoyf.com/114.114.114.114
 server=/huaue.com/114.114.114.114
 server=/huavisa.com/114.114.114.114
 server=/huawan.com/114.114.114.114
+server=/huawangyinshuachang.com/114.114.114.114
 server=/huawangzhixun.com/114.114.114.114
 server=/huawanyun.com/114.114.114.114
 server=/huawei-3com.com/114.114.114.114
