--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77803,6 +77803,7 @@ server=/thinkyeah.com/114.114.114.114
 server=/thinla.com/114.114.114.114
 server=/thinmoo.com/114.114.114.114
 server=/thinvent.com/114.114.114.114
+server=/thirtyindiantrail.com/114.114.114.114
 server=/thishealthsummit.com/114.114.114.114
 server=/thisshop.com/114.114.114.114
 server=/thiztech.com/114.114.114.114
