--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67935,6 +67935,7 @@ server=/qycs168.com/114.114.114.114
 server=/qycylinder.com/114.114.114.114
 server=/qyd-rf.com/114.114.114.114
 server=/qydimg.com/114.114.114.114
+server=/qydqw.com/114.114.114.114
 server=/qyer.com/114.114.114.114
 server=/qyerstatic.com/114.114.114.114
 server=/qyestar.com/114.114.114.114
