accelerated-domains: add hyht.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43038,6 +43038,7 @@ server=/hyhfsj.com/114.114.114.114
 server=/hyhjzc.com/114.114.114.114
 server=/hyhl66.com/114.114.114.114
 server=/hyhro.com/114.114.114.114
+server=/hyht.fun/114.114.114.114
 server=/hyhuo.com/114.114.114.114
 server=/hyhy.cc/114.114.114.114
 server=/hyhy2.fun/114.114.114.114
