accelerated-domains: add paike360.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63592,6 +63592,7 @@ server=/paihang360.com/114.114.114.114
 server=/paihang8.com/114.114.114.114
 server=/paihb.com/114.114.114.114
 server=/paihotels.cc/114.114.114.114
+server=/paike360.com/114.114.114.114
 server=/paiky.com/114.114.114.114
 server=/paiky.net/114.114.114.114
 server=/pailitao.com/114.114.114.114
