--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96327,6 +96327,7 @@ server=/zhjj.org/114.114.114.114
 server=/zhjncb.com/114.114.114.114
 server=/zhjp.net/114.114.114.114
 server=/zhjtaq.com/114.114.114.114
+server=/zhjtx.com/114.114.114.114
 server=/zhjxwh.com/114.114.114.114
 server=/zhjypco.com/114.114.114.114
 server=/zhk.me/114.114.114.114
