--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98755,6 +98755,7 @@ server=/zzwro.com/114.114.114.114
 server=/zzwtjx.com/114.114.114.114
 server=/zzxbn.com/114.114.114.114
 server=/zzxca.com/114.114.114.114
+server=/zzxcxkf.com/114.114.114.114
 server=/zzxcy.com/114.114.114.114
 server=/zzxdc.com/114.114.114.114
 server=/zzxfjxzz.com/114.114.114.114
