accelerated-domains: add yinongtao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91711,6 +91711,7 @@ server=/yinmakeji.com/114.114.114.114
 server=/yinmaojx.com/114.114.114.114
 server=/yinmishu.com/114.114.114.114
 server=/yinning.vip/114.114.114.114
+server=/yinongtao.com/114.114.114.114
 server=/yinpiao.com/114.114.114.114
 server=/yinrcw.com/114.114.114.114
 server=/yinsfinance.com/114.114.114.114
