accelerated-domains: add rahmg168.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68177,6 +68177,7 @@ server=/raeblog.com/114.114.114.114
 server=/rafflesmedicalchina.com/114.114.114.114
 server=/ragnarokcn.com/114.114.114.114
 server=/rahisystems-cn.com/114.114.114.114
+server=/rahmg168.com/114.114.114.114
 server=/raidc.com/114.114.114.114
 server=/rail-transit.com/114.114.114.114
 server=/railcn.net/114.114.114.114
