--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42043,6 +42043,7 @@ server=/huashengdaili.com/114.114.114.114
 server=/huashenghaoche.com/114.114.114.114
 server=/huashengjia100.com/114.114.114.114
 server=/huashengls.com/114.114.114.114
+server=/huashengsb.com/114.114.114.114
 server=/huashengtoutiao.com/114.114.114.114
 server=/huashi-sh.com/114.114.114.114
 server=/huashi.cc/114.114.114.114
