accelerated-domains: add bohanzhubao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15578,6 +15578,7 @@ server=/bohaishibei.com/114.114.114.114
 server=/bohaism.com/114.114.114.114
 server=/bohaisports.com/114.114.114.114
 server=/bohaiyun.com/114.114.114.114
+server=/bohanzhubao.com/114.114.114.114
 server=/bohaoclub.com/114.114.114.114
 server=/bohe.com/114.114.114.114
 server=/bohejiasuqi.com/114.114.114.114
