--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23209,6 +23209,7 @@ server=/custeel.com/114.114.114.114
 server=/customizedfasteners.com/114.114.114.114
 server=/customsapp.com/114.114.114.114
 server=/custouch.com/114.114.114.114
+server=/custpref.com/114.114.114.114
 server=/cuteng.com/114.114.114.114
 server=/cutepet-hk.com/114.114.114.114
 server=/cutieshop153.com/114.114.114.114
