accelerated-domains: add fengzuj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30354,6 +30354,7 @@ server=/fengyx.com/114.114.114.114
 server=/fengzegroup.com/114.114.114.114
 server=/fengzhan.vip/114.114.114.114
 server=/fengzhangame.net/114.114.114.114
+server=/fengzuj.com/114.114.114.114
 server=/fengzusw.com/114.114.114.114
 server=/fenha.net/114.114.114.114
 server=/fenjiji.net/114.114.114.114
