--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74280,6 +74280,7 @@ server=/soperson.com/114.114.114.114
 server=/sophgo.com/114.114.114.114
 server=/sophgo.vip/114.114.114.114
 server=/sopowcore.net/114.114.114.114
+server=/sopraysolar.com/114.114.114.114
 server=/soq.com/114.114.114.114
 server=/soqicrm.com/114.114.114.114
 server=/soquano.com/114.114.114.114
