accelerated-domains: add titloteka.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78339,6 +78339,7 @@ server=/titianshanfz.com/114.114.114.114
 server=/tititxt.com/114.114.114.114
 server=/titixs.cc/114.114.114.114
 server=/title-cn.com/114.114.114.114
+server=/titloteka.com/114.114.114.114
 server=/titussb.com/114.114.114.114
 server=/tivitv.com/114.114.114.114
 server=/tiwb.com/114.114.114.114
