--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42730,6 +42730,7 @@ server=/hurricanechip.com/114.114.114.114
 server=/hurun.net/114.114.114.114
 server=/husenji.com/114.114.114.114
 server=/hushangcaifu.com/114.114.114.114
+server=/husini.net/114.114.114.114
 server=/husiyang.com/114.114.114.114
 server=/hust-laser.com/114.114.114.114
 server=/hust-snde.com/114.114.114.114
