--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70423,6 +70423,7 @@ server=/scwmwl.com/114.114.114.114
 server=/scwy.net/114.114.114.114
 server=/scwyzx.com/114.114.114.114
 server=/scxdf.com/114.114.114.114
+server=/scxinhe.com/114.114.114.114
 server=/scxinkang.com/114.114.114.114
 server=/scxsls.com/114.114.114.114
 server=/scyanzu.com/114.114.114.114
