--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27436,6 +27436,7 @@ server=/dzfjsm.com/114.114.114.114
 server=/dzfwjd.com/114.114.114.114
 server=/dzfww.com/114.114.114.114
 server=/dzfxh.com/114.114.114.114
+server=/dzgcxcl.com/114.114.114.114
 server=/dzgg.com/114.114.114.114
 server=/dzglsb.net/114.114.114.114
 server=/dzgxq.com/114.114.114.114
