--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62022,6 +62022,7 @@ server=/north30degrees.com/114.114.114.114
 server=/northdy.com/114.114.114.114
 server=/northernlights.ink/114.114.114.114
 server=/northsoar.com/114.114.114.114
+server=/northtexascribs.com/114.114.114.114
 server=/nosec.org/114.114.114.114
 server=/nosoul99.com/114.114.114.114
 server=/nossmoke.com/114.114.114.114
