--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38151,6 +38151,7 @@ server=/hanhanfx.com/114.114.114.114
 server=/hanhengtanhuang.com/114.114.114.114
 server=/hanhua.com/114.114.114.114
 server=/hanhuatin.com/114.114.114.114
+server=/hanhuilvshi.com/114.114.114.114
 server=/hanihanrf.com/114.114.114.114
 server=/hanjea.com/114.114.114.114
 server=/hanjianbing.org/114.114.114.114
