--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90802,6 +90802,7 @@ server=/yd166.com/114.114.114.114
 server=/ydamc.com/114.114.114.114
 server=/ydbimg.com/114.114.114.114
 server=/ydbox.com/114.114.114.114
+server=/ydbzjx.com/114.114.114.114
 server=/ydc360.com/114.114.114.114
 server=/ydcb.com/114.114.114.114
 server=/ydce.com/114.114.114.114
