accelerated-domains: add qianchenglvdong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66097,6 +66097,7 @@ server=/qianbi360.com/114.114.114.114
 server=/qianbianapi.com/114.114.114.114
 server=/qianbianxiazai.com/114.114.114.114
 server=/qiancha.cc/114.114.114.114
+server=/qianchenglvdong.com/114.114.114.114
 server=/qianchengriben.com/114.114.114.114
 server=/qianchiyun.com/114.114.114.114
 server=/qianchuan.ltd/114.114.114.114
