--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34124,6 +34124,7 @@ server=/gouyoukeji.com/114.114.114.114
 server=/gov-static.tech/114.114.114.114
 server=/govfz.com/114.114.114.114
 server=/govisionox.net/114.114.114.114
+server=/govjc.com/114.114.114.114
 server=/govmade.com/114.114.114.114
 server=/govuln.com/114.114.114.114
 server=/gowan8.com/114.114.114.114
