--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22557,6 +22557,7 @@ server=/cqshipping.com/114.114.114.114
 server=/cqshouxi.com/114.114.114.114
 server=/cqslim.com/114.114.114.114
 server=/cqslim.net/114.114.114.114
+server=/cqsmls.com/114.114.114.114
 server=/cqsms.net/114.114.114.114
 server=/cqsoft.org/114.114.114.114
 server=/cqsta.com/114.114.114.114
