--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49798,6 +49798,7 @@ server=/jxjyzy.com/114.114.114.114
 server=/jxkjzb.com/114.114.114.114
 server=/jxkp.com/114.114.114.114
 server=/jxksw.net/114.114.114.114
+server=/jxldbj.com/114.114.114.114
 server=/jxlgjd.com/114.114.114.114
 server=/jxln.com/114.114.114.114
 server=/jxlpjt.com/114.114.114.114
