accelerated-domains: add jinmacy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47776,6 +47776,7 @@ server=/jinluzl.com/114.114.114.114
 server=/jinlvkeji.com/114.114.114.114
 server=/jinlyb.com/114.114.114.114
 server=/jinma-int.com/114.114.114.114
+server=/jinmacy.com/114.114.114.114
 server=/jinmalvyou.com/114.114.114.114
 server=/jinmao-ti.com/114.114.114.114
 server=/jinmao88.com/114.114.114.114
