accelerated-domains: add xzldbl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90167,6 +90167,7 @@ server=/xzkd.com/114.114.114.114
 server=/xzking.com/114.114.114.114
 server=/xzksyy.com/114.114.114.114
 server=/xzkx.com/114.114.114.114
+server=/xzldbl.com/114.114.114.114
 server=/xzlogo.com/114.114.114.114
 server=/xzlres.com/114.114.114.114
 server=/xzlsqy.com/114.114.114.114
