accelerated-domains: add zxyingyangyou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98498,6 +98498,7 @@ server=/zxxww.com/114.114.114.114
 server=/zxxxkj.com/114.114.114.114
 server=/zxxyedu.com/114.114.114.114
 server=/zxyee.com/114.114.114.114
+server=/zxyingyangyou.com/114.114.114.114
 server=/zxz.ee/114.114.114.114
 server=/zxzhengxin.com/114.114.114.114
 server=/zxzhijia.com/114.114.114.114
