--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77027,6 +77027,7 @@ server=/taotaocar.com/114.114.114.114
 server=/taotaogeren.xyz/114.114.114.114
 server=/taotaoit.com/114.114.114.114
 server=/taotaosports.com/114.114.114.114
+server=/taoth.com/114.114.114.114
 server=/taotian.com/114.114.114.114
 server=/taotieren.com/114.114.114.114
 server=/taotiwang.com/114.114.114.114
