accelerated-domains: add fuxny.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31655,6 +31655,7 @@ server=/fuxinews.com/114.114.114.114
 server=/fuxinghf.com/114.114.114.114
 server=/fuxingtech.com/114.114.114.114
 server=/fuxingwang.com/114.114.114.114
+server=/fuxny.com/114.114.114.114
 server=/fuxunpay.com/114.114.114.114
 server=/fuyangtv.com/114.114.114.114
 server=/fuyaogroup.com/114.114.114.114
