accelerated-domains: add tonbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78725,6 +78725,7 @@ server=/tompda.com/114.114.114.114
 server=/tomson-riviera.com/114.114.114.114
 server=/tomujiang.com/114.114.114.114
 server=/tomwx.net/114.114.114.114
+server=/tonbao.com/114.114.114.114
 server=/tonebj.com/114.114.114.114
 server=/tonechemical.com/114.114.114.114
 server=/tonehk.com/114.114.114.114
