--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31917,6 +31917,7 @@ server=/fzzhuoyi.com/114.114.114.114
 server=/fzzixun.com/114.114.114.114
 server=/fzzqcdn.com/114.114.114.114
 server=/g-biomed.com/114.114.114.114
+server=/g-bot4k.com/114.114.114.114
 server=/g-medon.com/114.114.114.114
 server=/g-tar.com/114.114.114.114
 server=/g-var.com/114.114.114.114
