accelerated-domains: add fenhuo360.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30361,6 +30361,7 @@ server=/fengzhangame.net/114.114.114.114
 server=/fengzuj.com/114.114.114.114
 server=/fengzusw.com/114.114.114.114
 server=/fenha.net/114.114.114.114
+server=/fenhuo360.com/114.114.114.114
 server=/fenjiji.net/114.114.114.114
 server=/fenjj.com/114.114.114.114
 server=/fenke.com/114.114.114.114
