--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16697,6 +16697,7 @@ server=/c1ass.com/114.114.114.114
 server=/c1channel.com/114.114.114.114
 server=/c1km4.com/114.114.114.114
 server=/c1s.com/114.114.114.114
+server=/c2contact.com/114.114.114.114
 server=/c2h4.org/114.114.114.114
 server=/c355595c3.buzz/114.114.114.114
 server=/c360dn.com/114.114.114.114
