accelerated-domains: add lnwgms.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54860,6 +54860,7 @@ server=/lntuxb.com/114.114.114.114
 server=/lntvu.com/114.114.114.114
 server=/lntycp.com/114.114.114.114
 server=/lnvipsoft.com/114.114.114.114
+server=/lnwgms.com/114.114.114.114
 server=/lnwoo.com/114.114.114.114
 server=/lnxldkj.com/114.114.114.114
 server=/lnxmt.com/114.114.114.114
