--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19250,6 +19250,7 @@ server=/chinabigdata.com/114.114.114.114
 server=/chinabigwin.com/114.114.114.114
 server=/chinabike.net/114.114.114.114
 server=/chinabimdata.org/114.114.114.114
+server=/chinabjfh.com/114.114.114.114
 server=/chinabmi.com/114.114.114.114
 server=/chinabn.org/114.114.114.114
 server=/chinabooktrading.com/114.114.114.114
