accelerated-domains: add craftusa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22653,6 +22653,7 @@ server=/cr6868.com/114.114.114.114
 server=/crabchina.com/114.114.114.114
 server=/craer.com/114.114.114.114
 server=/craftcontact.com/114.114.114.114
+server=/craftusa.com/114.114.114.114
 server=/craim.net/114.114.114.114
 server=/crandom.com/114.114.114.114
 server=/crane-china.cc/114.114.114.114
