--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85093,6 +85093,7 @@ server=/wosigndoc.com/114.114.114.114
 server=/woskj2.com/114.114.114.114
 server=/woso100.com/114.114.114.114
 server=/wotangka.com/114.114.114.114
+server=/wotransfer.com/114.114.114.114
 server=/wotrus.com/114.114.114.114
 server=/wotrust.com/114.114.114.114
 server=/wotta.net/114.114.114.114
