accelerated-domains: add ec-sz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27835,6 +27835,7 @@ server=/ebyte.com/114.114.114.114
 server=/ec-ae.com/114.114.114.114
 server=/ec-cloudtech.com/114.114.114.114
 server=/ec-founder.com/114.114.114.114
+server=/ec-sz.com/114.114.114.114
 server=/ec-world.com/114.114.114.114
 server=/ec.com/114.114.114.114
 server=/ec07yxgd11.com/114.114.114.114
