--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21430,6 +21430,7 @@ server=/cnhbstock.com/114.114.114.114
 server=/cnhbtc.com/114.114.114.114
 server=/cnhd.com/114.114.114.114
 server=/cnhenda.com/114.114.114.114
+server=/cnhhgjx.com/114.114.114.114
 server=/cnhhl.com/114.114.114.114
 server=/cnhiker.com/114.114.114.114
 server=/cnhis.cc/114.114.114.114
