--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28897,6 +28897,7 @@ server=/esemseo.com/114.114.114.114
 server=/esensoft.com/114.114.114.114
 server=/esfimg.com/114.114.114.114
 server=/eshangle.com/114.114.114.114
+server=/eshare.cc/114.114.114.114
 server=/esheep.com/114.114.114.114
 server=/eshenlin.com/114.114.114.114
 server=/eshimin.com/114.114.114.114
