--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64670,6 +64670,7 @@ server=/pj.com/114.114.114.114
 server=/pj00001.com/114.114.114.114
 server=/pj39.xyz/114.114.114.114
 server=/pj50.com/114.114.114.114
+server=/pj57.com/114.114.114.114
 server=/pj88.net/114.114.114.114
 server=/pjb9gv9.xyz/114.114.114.114
 server=/pjbest.com/114.114.114.114
