--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31902,6 +31902,7 @@ server=/gae-yfeigaggoagjag.com/114.114.114.114
 server=/gaeadata.com/114.114.114.114
 server=/gaeamobile-inc.net/114.114.114.114
 server=/gaeamobile.net/114.114.114.114
+server=/gaetausohyei.com/114.114.114.114
 server=/gafata.com/114.114.114.114
 server=/gafei.com/114.114.114.114
 server=/gafencuchina.com/114.114.114.114
