accelerated-domains: add wedoany.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83207,6 +83207,7 @@ server=/weddingos.com/114.114.114.114
 server=/wedengta.com/114.114.114.114
 server=/wedfairy.com/114.114.114.114
 server=/wedn.net/114.114.114.114
+server=/wedoany.com/114.114.114.114
 server=/wedoctor.com/114.114.114.114
 server=/wedolook.com/114.114.114.114
 server=/wedooapp.com/114.114.114.114
