accelerated-domains: add lpd8888.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55244,6 +55244,7 @@ server=/lp1901.com/114.114.114.114
 server=/lpaoz.com/114.114.114.114
 server=/lpcheng.com/114.114.114.114
 server=/lpcues.com/114.114.114.114
+server=/lpd8888.com/114.114.114.114
 server=/lpetl.com/114.114.114.114
 server=/lpgjkd.com/114.114.114.114
 server=/lph119.com/114.114.114.114
