accelerated-domains: add utaole.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81048,6 +81048,7 @@ server=/uszcn.com/114.114.114.114
 server=/ut8d.com/114.114.114.114
 server=/utan.com/114.114.114.114
 server=/utanbaby.com/114.114.114.114
+server=/utaole.com/114.114.114.114
 server=/utbon.com/114.114.114.114
 server=/utc-ic.com/114.114.114.114
 server=/utecbj.com/114.114.114.114
