accelerated-domains: add 11504.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1116,6 +1116,7 @@ server=/114zhibo.com/114.114.114.114
 server=/114zpw.com/114.114.114.114
 server=/114zw.org/114.114.114.114
 server=/115.com/114.114.114.114
+server=/11504.cc/114.114.114.114
 server=/1156.com/114.114.114.114
 server=/1156dns.com/114.114.114.114
 server=/115800.com/114.114.114.114
