accelerated-domains: add cqwdlwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22594,6 +22594,7 @@ server=/cqvip.com/114.114.114.114
 server=/cqvip.vip/114.114.114.114
 server=/cqw.cc/114.114.114.114
 server=/cqwbdq.com/114.114.114.114
+server=/cqwdlwl.com/114.114.114.114
 server=/cqweh.com/114.114.114.114
 server=/cqwenbo.com/114.114.114.114
 server=/cqwin.com/114.114.114.114
