--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77745,6 +77745,7 @@ server=/thebeastshop.com/114.114.114.114
 server=/thebeautools.com/114.114.114.114
 server=/thebeijinger.com/114.114.114.114
 server=/thebeijingnews.com/114.114.114.114
+server=/thebestsexsites.com/114.114.114.114
 server=/thebird-air.com/114.114.114.114
 server=/theblockbeats.info/114.114.114.114
 server=/thebuddycreative.com/114.114.114.114
