--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55886,6 +55886,7 @@ server=/lxbtrip.com/114.114.114.114
 server=/lxcdns.com/114.114.114.114
 server=/lxcsc.com/114.114.114.114
 server=/lxcvc.com/114.114.114.114
+server=/lxcxtzjt.com/114.114.114.114
 server=/lxdfs.com/114.114.114.114
 server=/lxdms.com/114.114.114.114
 server=/lxdns.com/114.114.114.114
