--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38991,6 +38991,7 @@ server=/hbyybwff.com/114.114.114.114
 server=/hbzaxh.com/114.114.114.114
 server=/hbzbjxzz.com/114.114.114.114
 server=/hbzbw.com/114.114.114.114
+server=/hbzcmy.com/114.114.114.114
 server=/hbzgjx.com/114.114.114.114
 server=/hbzh.net/114.114.114.114
 server=/hbzhan.com/114.114.114.114
