accelerated-domains: add sanjiang88.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69903,6 +69903,7 @@ server=/saninbazar.com/114.114.114.114
 server=/saniwaveltd.com/114.114.114.114
 server=/sanjiahospital.com/114.114.114.114
 server=/sanjiang.com/114.114.114.114
+server=/sanjiang88.com/114.114.114.114
 server=/sanjiangdai.com/114.114.114.114
 server=/sanjianglife.com/114.114.114.114
 server=/sanjiangtourism.com/114.114.114.114
