accelerated-domains: add zhongxingdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96518,6 +96518,7 @@ server=/zhongxiangdichan.net/114.114.114.114
 server=/zhongxiangwang.co/114.114.114.114
 server=/zhongxiaole.net/114.114.114.114
 server=/zhongxiaoyl.com/114.114.114.114
+server=/zhongxingdc.com/114.114.114.114
 server=/zhongxinkeji.vip/114.114.114.114
 server=/zhongxinlm.com/114.114.114.114
 server=/zhongxinwei.net/114.114.114.114
