--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27851,6 +27851,7 @@ server=/ecarxgroup.com/114.114.114.114
 server=/ecbcamp.com/114.114.114.114
 server=/ecboo.com/114.114.114.114
 server=/ecbos.com/114.114.114.114
+server=/ecbuy.net/114.114.114.114
 server=/eccang.com/114.114.114.114
 server=/eccc-china.com/114.114.114.114
 server=/eccdnx.com/114.114.114.114
