--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80596,6 +80596,7 @@ server=/ultracachenode.com/114.114.114.114
 server=/ultramanol.com/114.114.114.114
 server=/ultrapay.net/114.114.114.114
 server=/ultrarisc.com/114.114.114.114
+server=/ultrarobin.com/114.114.114.114
 server=/ulucu.com/114.114.114.114
 server=/ulzdk.com/114.114.114.114
 server=/um.run/114.114.114.114
