--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11479,6 +11479,7 @@ server=/aplusunion.com/114.114.114.114
 server=/apmarry.com/114.114.114.114
 server=/apmbooth.com/114.114.114.114
 server=/apme-magnetics.com/114.114.114.114
+server=/apmengfan.com/114.114.114.114
 server=/apmvista.com/114.114.114.114
 server=/apnring.com/114.114.114.114
 server=/apodaenvi.com/114.114.114.114
