--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75536,6 +75536,7 @@ server=/suyutech.com/114.114.114.114
 server=/suzhou-marathon.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
+server=/suzhoudyh.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
 server=/suzhoujicai.com/114.114.114.114
 server=/suzhoulida.com/114.114.114.114
