--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39889,6 +39889,7 @@ server=/hgyys.com/114.114.114.114
 server=/hgzcjt.com/114.114.114.114
 server=/hgzk.com/114.114.114.114
 server=/hgzkb.com/114.114.114.114
+server=/hgzkj.com/114.114.114.114
 server=/hgzrt.com/114.114.114.114
 server=/hgzyxy.com/114.114.114.114
 server=/hh-gltd.com/114.114.114.114
