--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56938,6 +56938,7 @@ server=/mashangfl.com/114.114.114.114
 server=/mashangmai.com/114.114.114.114
 server=/mashangshijie.com/114.114.114.114
 server=/mashangxue123.com/114.114.114.114
+server=/mashigaoyao.com/114.114.114.114
 server=/mashiro.me/114.114.114.114
 server=/mashrabiya-screen.com/114.114.114.114
 server=/masiao.com/114.114.114.114
