accelerated-domains: add zccfkg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94969,6 +94969,7 @@ server=/zcand.com/114.114.114.114
 server=/zcbearing.com/114.114.114.114
 server=/zcbm580.com/114.114.114.114
 server=/zcccc.com/114.114.114.114
+server=/zccfkg.com/114.114.114.114
 server=/zccrzx.com/114.114.114.114
 server=/zcdiesel.com/114.114.114.114
 server=/zcdlkeji.com/114.114.114.114
