--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63950,6 +63950,7 @@ server=/pcbtime.com/114.114.114.114
 server=/pccm88.com/114.114.114.114
 server=/pccpa.hk/114.114.114.114
 server=/pccppc.com/114.114.114.114
+server=/pcdan.net/114.114.114.114
 server=/pcdnhome.com/114.114.114.114
 server=/pcdog.com/114.114.114.114
 server=/pcdrv.com/114.114.114.114
