--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58160,6 +58160,7 @@ server=/milanshishang.com/114.114.114.114
 server=/milanvip.com/114.114.114.114
 server=/milchips.com/114.114.114.114
 server=/mileage.vip/114.114.114.114
+server=/milegj1.com/114.114.114.114
 server=/milejia.com/114.114.114.114
 server=/milemovie.com/114.114.114.114
 server=/mileshub.net/114.114.114.114
