accelerated-domains: add ahsxlccp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9726,6 +9726,7 @@ server=/ahst123.com/114.114.114.114
 server=/ahsthzx.com/114.114.114.114
 server=/ahswyz.com/114.114.114.114
 server=/ahsxkyb.com/114.114.114.114
+server=/ahsxlccp.com/114.114.114.114
 server=/ahsyj.com/114.114.114.114
 server=/ahsylsy.com/114.114.114.114
 server=/ahsz.tv/114.114.114.114
