accelerated-domains: add doll-love.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26195,6 +26195,7 @@ server=/dolfindnsx.net/114.114.114.114
 server=/dolgma.com/114.114.114.114
 server=/dolike.com/114.114.114.114
 server=/doll-leaves.com/114.114.114.114
+server=/doll-love.com/114.114.114.114
 server=/doll-zone.com/114.114.114.114
 server=/dollphoin.site/114.114.114.114
 server=/dollsdeclare.com/114.114.114.114
