accelerated-domains: add dun555.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26992,6 +26992,7 @@ server=/dumpapp.com/114.114.114.114
 server=/dun-mfy-cdn.com/114.114.114.114
 server=/dun.la/114.114.114.114
 server=/dun.tax/114.114.114.114
+server=/dun555.com/114.114.114.114
 server=/dunankeji.com/114.114.114.114
 server=/dunbaigo.com/114.114.114.114
 server=/dungeon-server.com/114.114.114.114
