accelerated-domains: add bcjmk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13498,6 +13498,7 @@ server=/bchrt.com/114.114.114.114
 server=/bcisz.org/114.114.114.114
 server=/bcitb.com/114.114.114.114
 server=/bcjkcloud.com/114.114.114.114
+server=/bcjmk.com/114.114.114.114
 server=/bcjp.net/114.114.114.114
 server=/bcjy6.com/114.114.114.114
 server=/bclcraft.com/114.114.114.114
