accelerated-domains: add yyhnj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94527,6 +94527,7 @@ server=/yyha168.com/114.114.114.114
 server=/yyhao.com/114.114.114.114
 server=/yyhh.com/114.114.114.114
 server=/yyhn365.com/114.114.114.114
+server=/yyhnj.com/114.114.114.114
 server=/yyi100.com/114.114.114.114
 server=/yyixx.com/114.114.114.114
 server=/yyizu.com/114.114.114.114
