accelerated-domains: add ntsloadcell.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62236,6 +62236,7 @@ server=/ntrcb.com/114.114.114.114
 server=/ntrun.com/114.114.114.114
 server=/ntsanta.com/114.114.114.114
 server=/ntsgx.com/114.114.114.114
+server=/ntsloadcell.com/114.114.114.114
 server=/ntsuye.com/114.114.114.114
 server=/nttui.com/114.114.114.114
 server=/ntwikis.com/114.114.114.114
