accelerated-domains: add howtheylink.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41325,6 +41325,7 @@ server=/howelllighting.com/114.114.114.114
 server=/howjoin.com/114.114.114.114
 server=/howlapm.com/114.114.114.114
 server=/howsci.com/114.114.114.114
+server=/howtheylink.com/114.114.114.114
 server=/howtoing.com/114.114.114.114
 server=/howxm.com/114.114.114.114
 server=/howyouinternational.com/114.114.114.114
