accelerated-domains: add kelkjj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50743,6 +50743,7 @@ server=/kelete.com/114.114.114.114
 server=/kelibiao.com/114.114.114.114
 server=/kelilens.com/114.114.114.114
 server=/kelinsoft.com/114.114.114.114
+server=/kelkjj.com/114.114.114.114
 server=/kelon.com/114.114.114.114
 server=/kelong-powder.com/114.114.114.114
 server=/kelongding.com/114.114.114.114
