accelerated-domains: add aotemeite.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11369,6 +11369,7 @@ server=/aosong.com/114.114.114.114
 server=/aosoo.com/114.114.114.114
 server=/aoswtc.com/114.114.114.114
 server=/aotchina.com/114.114.114.114
+server=/aotemeite.com/114.114.114.114
 server=/aotian.com/114.114.114.114
 server=/aotrip.net/114.114.114.114
 server=/aotutu.com/114.114.114.114
