accelerated-domains: add minyueqi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58399,6 +58399,7 @@ server=/minunix.com/114.114.114.114
 server=/minxindai.com/114.114.114.114
 server=/minxing365.com/114.114.114.114
 server=/minxue.net/114.114.114.114
+server=/minyueqi.com/114.114.114.114
 server=/minyukji.com/114.114.114.114
 server=/minyunit.cool/114.114.114.114
 server=/minz.press/114.114.114.114
