--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57062,6 +57062,7 @@ server=/mayicms.com/114.114.114.114
 server=/mayihr.com/114.114.114.114
 server=/mayiic.com/114.114.114.114
 server=/mayima.net/114.114.114.114
+server=/mayipk.com/114.114.114.114
 server=/mayishebao.com/114.114.114.114
 server=/mayishoubei.com/114.114.114.114
 server=/mayitek.com/114.114.114.114
