--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81939,6 +81939,7 @@ server=/vnet.mobi/114.114.114.114
 server=/vnnox.com/114.114.114.114
 server=/vnpy.com/114.114.114.114
 server=/vns1.net/114.114.114.114
+server=/vns3889.com/114.114.114.114
 server=/vnuuh.icu/114.114.114.114
 server=/vnymvnu.com/114.114.114.114
 server=/vnzmi.com/114.114.114.114
