--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98685,6 +98685,7 @@ server=/zzd.pub/114.114.114.114
 server=/zzded.com/114.114.114.114
 server=/zzdengji.com/114.114.114.114
 server=/zzdh.net/114.114.114.114
+server=/zzdkdz.com/114.114.114.114
 server=/zzdl.com/114.114.114.114
 server=/zzdtec.com/114.114.114.114
 server=/zzect.com/114.114.114.114
