accelerated-domains: add ttwxh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79565,6 +79565,7 @@ server=/ttwebview.com/114.114.114.114
 server=/ttwifi.net/114.114.114.114
 server=/ttwqw.com/114.114.114.114
 server=/ttwx.com/114.114.114.114
+server=/ttwxh.com/114.114.114.114
 server=/ttxgu.com/114.114.114.114
 server=/ttxjj.com/114.114.114.114
 server=/ttxn.com/114.114.114.114
