accelerated-domains: add gsrcb.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34423,6 +34423,7 @@ server=/gsp12-cn.ls.apple.com/114.114.114.114
 server=/gspaceteam.com/114.114.114.114
 server=/gspst.com/114.114.114.114
 server=/gsqstudio.com/114.114.114.114
+server=/gsrcb.net/114.114.114.114
 server=/gsrcu.com/114.114.114.114
 server=/gsrecv.com/114.114.114.114
 server=/gsrl.net/114.114.114.114
