--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26845,6 +26845,7 @@ server=/dt-stor.com/114.114.114.114
 server=/dt0j.icu/114.114.114.114
 server=/dt123.net/114.114.114.114
 server=/dt830.com/114.114.114.114
+server=/dtbyt.com/114.114.114.114
 server=/dtcj.com/114.114.114.114
 server=/dtcms.net/114.114.114.114
 server=/dtcoalmine.com/114.114.114.114
